--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ input {
     background-color: var(--light-cyan);
     border: none;
     outline-color: var(--strong-cyan);
-    text-align: right; 
+    text-align: right;
+    font-weight: 700;
 }
 
 
@@ -40,6 +41,7 @@ header {
     margin: 1rem 0;
     text-transform: uppercase;
     letter-spacing: 10px;
+    color: var(--dark-cyan);
 }
 
 main {
@@ -50,6 +52,9 @@ main {
     margin: .5rem 0;
     display: flex;
     flex-direction: column;
+    -webkit-box-shadow: 0px 2px 14px 1px rgba(197,228,231,0.45);
+-moz-box-shadow: 0px 2px 14px 1px rgba(197,228,231,0.45);
+box-shadow: 0px 2px 14px 1px rgba(197,228,231,0.45);
 }
 
 .left-col,
